THRIFT-5234 Fix a number of js/ts generation issues Client: js/ts Patch: Phil Price